--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/uwhereapp
 #spring.datasource.url=jdbc:mysql://localhost:3306/uwhereapp?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
 spring.datasource.url=jdbc:mariadb://35.216.31.77:30301/uwhereapp
-spring.datasource.username=root
-spring.datasource.password=richuwhe1!
+spring.datasource.username=${USER_NAME}
+spring.datasource.password=${USER_PASSWORD}
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
